add a button to fetch a random Korean sentence

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -4,7 +4,7 @@
 
 @use '@material/theme/index' as theme with (
   $primary: #005cb2,
-  $secondary: #fbc02d,
+  $secondary: #ff8a80,
   $surface: #fff,
   $background: #fff,
   $error: color-palette.$red-900,
